--- a/package.json
+++ b/package.json
@@ -2,11 +2,20 @@
   "name": "scraping-olx",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
+    "start": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "axios": "^1.7.7",
+    "cheerio": "^1.0.0",
+    "puppeteer": "^23.3.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
+  }
 }
