--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "scraping-olx",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "scrapers/index.js",
   "scripts": {
     "start": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
