--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -55,8 +55,8 @@ jobs:
           cd querocasa
           git config --global user.name ${{ secrets.GIT_USER_NAME }}
           git config --global user.email ${{ secrets.GIT_USER_EMAIL }}
-          git checkout api
-          git pull origin main 
+          git checkout api --
+          git rebase origin/main
           git add data/results
           if git diff --cached --quiet; then
             echo "No changes to commit"
