--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -54,7 +54,7 @@ jobs:
           cd querocasa
           git config --global user.name ${{ secrets.GIT_USER_NAME }}
           git config --global user.email ${{ secrets.GIT_USER_EMAIL }}
-          git stash
+          git stash -u
           git checkout api --
           git rebase origin/main
           git stash pop
