--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -54,11 +54,10 @@ jobs:
           cd querocasa
           git config --global user.name ${{ secrets.GIT_USER_NAME }}
           git config --global user.email ${{ secrets.GIT_USER_EMAIL }}
-
+          git stash -u
           git checkout api  
-
           git merge origin/main --no-ff || true   
-
+          git stash pop
           git add data/results
           if git diff --cached --quiet; then
             echo "No changes to commit"
