--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -46,24 +46,36 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.TARGET_REPO_PAT }}
 
       - name: Create data directory if not exists
-        run: mkdir -p querocasa/data
+        run: mkdir -p querocasa/data/results
 
       - name: Copy results folder to target repository
+        run: cp -r data/results querocasa/data/results
+
+      - name: Configure Git user
         run: |
-          cp -r data/results querocasa/data
           cd querocasa
-          git config --global user.name ${{ secrets.GIT_USER_NAME }}
-          git config --global user.email ${{ secrets.GIT_USER_EMAIL }}
-          git stash -u
-          git checkout api  
-          git merge origin/main --no-ff || true   
-          git stash pop
+          git config --global user.name "${{ secrets.GIT_USER_NAME }}"
+          git config --global user.email "${{ secrets.GIT_USER_EMAIL }}"
+
+      - name: Checkout to api branch
+        run: |
+          cd querocasa
+          git checkout api || git checkout -b api
+
+      - name: Merge main into api with theirs strategy
+        run: |
+          cd querocasa
+          git merge -X theirs origin/main || true
+
+      - name: Commit and push changes
+        run: |
+          cd querocasa
           git add data/results
           if git diff --cached --quiet; then
             echo "No changes to commit"
           else
             git commit -m ":rocket: Update results folder"
-            git push https://${{ secrets.TARGET_REPO_PAT }}@github.com/${{ secrets.TARGET_REPO_URL }}.git
+            git push https://${{ secrets.TARGET_REPO_PAT }}@github.com/${{ secrets.TARGET_REPO_URL }}.git HEAD:api
           fi
         env:
           GITHUB_TOKEN: ${{ secrets.TARGET_REPO_PAT }}
