--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -46,10 +46,10 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.TARGET_REPO_PAT }}
 
       - name: Create data directory if not exists
-        run: mkdir -p querocasa/data/results
+        run: mkdir -p querocasa/data
 
       - name: Copy results folder to target repository
-        run: cp -r data/results querocasa/data/results
+        run: cp -r data/results querocasa/data
 
       - name: Configure Git user
         run: |
