--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -75,7 +75,7 @@ jobs:
       - name: Commit and push changes
         run: |
           cd querocasa
-          git push --set-upstream origin api
+          git branch --set-upstream-to=origin/api api
           git pull
           git add data/results -f
           if git diff --cached --quiet; then
