--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -21,6 +21,9 @@ jobs:
           name: results
           path: data/results
 
+      - name: List downloaded artifact
+        run: ls -la data/results
+
       - name: Clone the target repository
         run: |
           git clone https://github.com/${{ secrets.TARGET_REPO_URL }}.git
@@ -62,4 +65,3 @@ jobs:
       #   run: |
       #     cd querocasa
       #     git merge -X theirs origin/main || true
-  
