🔧 Atualiza caminhos de artefatos para simplificar a estrutura de diretórios nos workflows de commit e scrape

--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: results
-          path: data/results
+          path: data
 
       - name: List downloaded artifact
         run: ls -la data/results
