--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -45,4 +45,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: results
-          path: data/results
+          path: data
