--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -45,4 +45,21 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: results
-          path: data
+          path: data/results
+
+  verify-upload:
+    needs: scrape
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Download artifact from previous job
+        uses: actions/download-artifact@v4
+        with:
+          name: results
+          path: data/results
+
+      - name: List downloaded artifact
+        run: ls -la data/results
