--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -90,8 +90,9 @@ jobs:
           cd querocasa
           git checkout api || git checkout -b api
           git branch --set-upstream-to=origin/api api
+          git config pull.ff only
           git pull
-          git add data/results -f
+          git add data/results
           if git diff --cached --quiet; then
             echo "No changes to commit"
           else
