🔧 Adiciona rebase ao comando git pull no workflow de scrape para manter histórico linear

--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -66,6 +66,7 @@ jobs:
           cd querocasa
           git fetch
           git checkout api || git checkout -b api
+          git pull --rebase
         env:
           GITHUB_TOKEN: ${{ secrets.TARGET_REPO_PAT }}
 
