--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -1,4 +1,4 @@
-name: Scrape OLX and push results
+name: Scrape OLX and Zap and push results
 
 on:
   push:
@@ -9,7 +9,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  scrape:
+  olx-scraper:
     runs-on: ubuntu-latest
     outputs:
       artifact-path: ${{ steps.upload-artifact.outputs.artifact-path }}
@@ -34,32 +34,76 @@ jobs:
           mkdir -p data
           mkdir -p data/results
 
-      - name: Run scraper with Xvfb
+      - name: Run OLX scraper
         run: |
           Xvfb :99 -ac &
           export DISPLAY=:99
-          node scrapers/index.js
+          node scrapers/index.js olx
 
-      - name: Save results folder as an artifact
-        id: upload-artifact
+      - name: Save OLX results as an artifact
+        id: upload-olx-artifact
         uses: actions/upload-artifact@v4
         with:
-          name: results
+          name: olx-results
           path: data/results
 
-  update-repo:
+  zap-scraper:
     runs-on: ubuntu-latest
-    needs: scrape
+    outputs:
+      artifact-path: ${{ steps.upload-artifact.outputs.artifact-path }}
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Download artifact
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Install Xvfb
+        run: sudo apt-get install -y xvfb
+
+      - name: Create data artifact directory if not exists
+        run: |
+          mkdir -p data
+          mkdir -p data/results
+
+      - name: Run Zap scraper
+        run: |
+          Xvfb :99 -ac &
+          export DISPLAY=:99
+          node scrapers/index.js zap
+
+      - name: Save Zap results as an artifact
+        id: upload-zap-artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: zap-results
+          path: data/results
+
+  update-repo:
+    runs-on: ubuntu-latest
+    needs: [olx-scraper, zap-scraper]
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Download OLX artifact
         uses: actions/download-artifact@v4
         with:
-          name: results
-          path: data/results
+          name: olx-results
+          path: data/results/olx
+
+      - name: Download Zap artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: zap-results
+          path: data/results/zap
 
       - name: Clone the target repository
         run: |
