--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -43,7 +43,13 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: olx-results
-          path: data/results/*.json # Salva apenas os arquivos .json diretamente
+          path: data/results/*.json
+
+      - name: Save error screenshots as an artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: error-screenshots
+          path: data/results/*.png
 
   zap-scraper:
     runs-on: ubuntu-latest
@@ -81,6 +87,12 @@ jobs:
           name: zap-results
           path: data/results/*.json
 
+      - name: Save error screenshots as an artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: error-screenshots
+          path: data/results/*.png
+
   update-repo:
     runs-on: ubuntu-latest
     needs: [olx-scraper, zap-scraper]
@@ -107,7 +119,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.TARGET_REPO_PAT }}
 
-      - name: Checkout to api branch
+      - name: Checkout to api branch and update
         run: |
           cd querocasa
           git fetch origin
