🔧 atualiza workflow de scraping para adicionar verificação de arquivos antes do commit e otimiza salvamento de artefatos

--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -41,14 +41,12 @@ jobs:
       - name: Save OLX results as an artifact
         id: upload-olx-artifact
         uses: actions/upload-artifact@v4
-        if: always()
         with:
           name: olx-results
           path: data/results/*.json
 
       - name: Save error screenshots as an artifact
         uses: actions/upload-artifact@v4
-        if: always()
         with:
           name: error-screenshots
           path: data/results/*.png
@@ -85,14 +83,12 @@ jobs:
       - name: Save Zap results as an artifact
         id: upload-zap-artifact
         uses: actions/upload-artifact@v4
-        if: always()
         with:
           name: zap-results
           path: data/results/*.json
 
       - name: Save error screenshots as an artifact
         uses: actions/upload-artifact@v4
-        if: always()
         with:
           name: error-screenshots
           path: data/results/*.png
@@ -107,14 +103,12 @@ jobs:
 
       - name: Download OLX artifact
         uses: actions/download-artifact@v4
-        if: steps.upload-olx-artifact.outputs.artifact-path != ''
         with:
           name: olx-results
           path: data/results
 
       - name: Download Zap artifact
         uses: actions/download-artifact@v4
-        if: steps.upload-zap-artifact.outputs.artifact-path != ''
         with:
           name: zap-results
           path: data/results
@@ -135,7 +129,7 @@ jobs:
         run: mkdir -p querocasa/data
 
       - name: Copy results folder to target repository
-        run: cp -r data/results querocasa/data || true
+        run: cp -r data/results querocasa/data
 
       - name: Configure Git user
         run: |
@@ -156,16 +150,15 @@ jobs:
       - name: Commit and push changes
         run: |
           cd querocasa
-          echo "Adding changes to git"
-          git add data/results -f
-
-          if git diff --cached --quiet; then
-            echo "No changes to commit"
-          else
-            echo "Committing changes"
-            git commit -m ":rocket: Update results folder"
-            echo "Pushing changes"
+          if [ -n "$(ls data/results/*.json 2>/dev/null)" ] || [ -n "$(ls data/results/*.png 2>/dev/null)" ]; then
+            echo "Adicionando arquivos JSON e/ou prints ao git"
+            git add data/results/*.json 2>/dev/null || true
+            git add data/results/*.png 2>/dev/null || true
+            git commit -m ":rocket: Update results folder with new data or error screenshots"
+            echo "Fazendo push das mudanças"
             git push https://${{ secrets.TARGET_REPO_PAT }}@github.com/${{ secrets.TARGET_REPO_URL }}.git HEAD:api
+          else
+            echo "Nenhum arquivo JSON ou print encontrado. Pulando commit."
           fi
         env:
           GITHUB_TOKEN: ${{ secrets.TARGET_REPO_PAT }}
