--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -81,25 +81,13 @@ jobs:
           name: zap-results
           path: data/results
 
-  update-repo:
+  download-and-update-repo:
     runs-on: ubuntu-latest
     needs: [olx-scraper, zap-scraper]
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
-      - name: Download OLX artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: olx-results
-          path: data/results
-
-      - name: Download Zap artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: zap-results
-          path: data/results
 
       - name: Clone the target repository
         run: |
@@ -114,10 +102,7 @@ jobs:
           git checkout -b api origin/api
 
       - name: Create data directory if not exists
-        run: mkdir -p querocasa/data
-
-      - name: Copy results folder to target repository
-        run: cp -r data/results querocasa/data || true
+        run: mkdir -p querocasa/data/results
 
       - name: Configure Git user
         run: |
@@ -134,6 +119,50 @@ jobs:
         run: |
           cd querocasa
           git branch --set-upstream-to=origin/api api
+
+  update-coordinates:
+    runs-on: ubuntu-latest
+    needs: download-and-update-repo
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Download OLX artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: olx-results
+          path: querocasa/data/results
+
+      - name: Download Zap artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: zap-results
+          path: querocasa/data/results
+
+      - name: Copy results folder to target repository
+        run: cp -r querocasa/data/results querocasa/data || true
+
+      - name: Update coordinates
+        run: |
+          cd querocasa
+          node scripts/updateCoordinates.js
+
+  commit-and-push:
+    runs-on: ubuntu-latest
+    needs: update-coordinates
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
       - name: Commit and push changes
         run: |
