--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -138,7 +138,10 @@ jobs:
       - name: Install dependencies
         run: |
           npm install
+          echo "Root directory after npm install:"
           ls
+          echo "Checking querocasa directory:"
+          ls querocasa || echo "No querocasa directory found"
 
       - name: Download OLX artifact
         uses: actions/download-artifact@v4
@@ -155,16 +158,21 @@ jobs:
       - name: Copy results folder to target repository
         run: cp -r querocasa/data/results querocasa/data || true
 
+      - name: Check for scripts folder before running
+        run: |
+          echo "Checking querocasa directory contents again:"
+          ls querocasa || echo "No querocasa directory found"
+          echo "Checking for scripts folder inside querocasa:"
+          ls querocasa/scripts || echo "No scripts folder found"
+
       - name: Update coordinates
         run: |
           echo "Current directory"
           ls
           echo "Changing directory"
           cd querocasa
-          echo "querocasa folder"
-          ls
-          echo "Updating coordinates"
-          node querocasa/scripts/updateCoordinates.js
+          echo "Running updateCoordinates.js"
+          node scripts/updateCoordinates.js || echo "Script not found"
 
   commit-and-push:
     runs-on: ubuntu-latest
