🔧 adiciona comando npm install no workflow de scraping antes de executar o script de atualização de coordenadas

--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -141,6 +141,7 @@ jobs:
           echo "Changing directory"
           cd querocasa
           ls
+          npm install
           echo "---------------------"
           echo "Running updateCoordinates.js"
           node scripts/updateCoordinates.js || echo "Script not found"
