🔧 atualiza o nome do arquivo de captura de erro para incluir data e hora formatadas em pt-BR nos scrapers OLX e Zap

--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -236,7 +236,40 @@ jobs:
         run: |
           echo "Mesclando resultados..."
           cd querocasa
-          node scripts/mergeResults.js
+
+          # Cria um script temporário para executar o merge com caminhos explícitos
+          cat > run-merge.js <<'EOF'
+          import { processPlatformResults, configurePaths } from './scripts/mergeResults.js';
+
+          // Define os caminhos usados na pipeline
+          const OLD_PATH = './data/results';   // Dados antigos (mesmo diretório)
+          const NEW_PATH = './data/results';   // Dados novos (mesmo diretório)
+
+          async function runMerge() {
+            try {
+              console.log('Configurando caminhos específicos para o CI...');
+              console.log(`OLD_PATH: ${OLD_PATH}`);
+              console.log(`NEW_PATH: ${NEW_PATH}`);
+              
+              // Configura os caminhos explicitamente
+              configurePaths(OLD_PATH, NEW_PATH);
+              
+              // Executa o merge para cada plataforma
+              await processPlatformResults('olx');
+              await processPlatformResults('zap');
+              
+              console.log('Merge completo!');
+            } catch (error) {
+              console.error('Erro durante o merge:', error);
+              process.exit(1);
+            }
+          }
+
+          runMerge();
+          EOF
+
+          # Executa o script personalizado
+          node run-merge.js
           echo "Resultados mesclados com sucesso!"
 
       - name: Update coordinates
